/** @page apreq_changes CHANGES
@brief List of major changes.


@section v2_05_dev Changes with libapreq2-2.05-dev


- Perl API [joes]
  Move bake, bake2 to Apache2::Cookie, now requiring
  an extra $r argument.  Also ""-operator is mapped
  to as_string() for Apache2::Cookie;  but APR::Request::Cookie
  maps it to value().

- C API [joes]
  Remove header_in & header_out from apreq_module_t.
  Remove apreq_ua_cookie_version() and apreq_cookie_bake*().
  Remove cookie2 argument to apreq_handle_custom().

- C API [joes]
  s/APREQ/APREQ2/g in webserver configuration directives.

- C API [Igor Shevchenko, Philip Gollucci]
  Fix segfault in mfd parser caused by parts w/ empty param names.

- C API [joes]
  Add apreq_cp1252_to_utf8().

- C, Perl API [joes]
  Add charset support for params and couple the SvUTF8 flag
  to the param's taint flag.

- C API [joes]
  Replace v->size with v->nlen + v->dlen.
  Added supporting apreq_value_table_add().

- C API [joes]
  Remove apreq_cookie_attr().

- C API [joes]
  - Add apreq_error.h, apreq_module.h.
  - Rename apreq_run* and apreq_make* funcs to conform with 
    apreq_$obj_$meth scheme.
  - Replace c->version & c->secure with flags.
  - Parsers are assumed to be working with external data, so the
    cookies & params they produce are marked tainted.

- C API [joes]
  apreq_parse_cookie_header() failed to parse RFC Cookie headers which
  contained no space chars after the '$Version=1' preamble.

- C API [joes]
  Reorganize around include/, library/, and module/ dirs.

- C Tests [joes]
  Replace CuTest-based tests with custom TAP-compliant framework.

- C API [Max Kellermann]
  Continue the API improvements:

  - Convert APREQ_RUN_PARSER and APREQ_RUN_HOOK to inline, and downcase them.
  - Remove apreq_memmem.
  - Convert apreq_(un)escape to inline.
  - apreq_escape does not create an apreq_value_t*.
  - Initialize default_parsers explicitly to NULL.
  - Convert APREQ_BRIGADE_COPY to inline, and downcase it.